--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </li>
     </ul>
 
-    <h1>Here I am</h1>
+    <h1>Elsewhere</h1>
     <ul>
       <li>
         <a href="https://indieweb.social/@adamghill">indieweb.social/@adamghill</a>
