Add plausible script.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       right: 2em;
     }
   </style>
+  <script defer data-domain="adamghill.com" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
@@ -53,6 +54,9 @@
       </li>
       <li>
         <a href="https://dev.to/adamghill">dev.to/adamghill</a>
+      </li>
+      <li>
+        <a href="https://www.indiehackers.com/adamghill">indiehackers.com/adamghill</a>
       </li>
     </ul>
   </main>
