--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         </span>
       </li>
       <li>
-        <a href="https://alldjango.com">alldjango.com</a>
+        <a href="https://quixels.com">quixels.com</a>
         <span class="info">
-          No bullshit help for perfectionists with deadlines
+          API-first AI
         </span>
       </li>
       <li>
@@ -81,15 +81,21 @@
         </span>
       </li>
       <li>
+        <a href="https://alldjango.com">alldjango.com</a>
+        <span class="info">
+          No bullshit help for perfectionists
+        </span>
+      </li>
+      <li>
         <a href="https://python-utils.adamghill.com">python-utils.adamghill.com</a>
         <span class="info">
-          Online playground for Python
+          Python playground
         </span>
       </li>
       <li>
         <a href="https://isitwebscale.adamghill.com">isitwebscale.adamghill.com</a>
         <span class="info">
-          But... is it web scale?
+          Is it web scale?!
         </span>
       </li>
     </ul>
@@ -100,37 +106,37 @@
       <li>
         <a href="https://django-unicorn.com">unicorn</a>
         <span class="info">
-          Reactive component library for Django
+          Reactive Django component library
         </span>
       </li>
       <li>
         <a href="https://dlitejs.com">dlite</a>
         <span class="info">
-          JS library for Web Components and interactivity
+          Reactive Web Components (JS)
         </span>
       </li>
       <li>
         <a href="https://coltrane.readthedocs.io">coltrane</a>
         <span class="info">
-          Django-based content framework that uses Markdown
+          Hybrid static site generator
         </span>
       </li>
       <li>
         <a href="https://minestrone.readthedocs.io">minestrone</a>
         <span class="info">
-          Search, modify, and parse messy HTML
+          Parse and modify messy HTML
         </span>
       </li>
       <li>
         <a href="https://django-fbv.readthedocs.io">django-fbv</a>
         <span class="info">
-          Utilities to make Django function-based views cleaner
+          Django function-based view utilities
         </span>
       </li>
       <li>
         <a href="https://django-rich-logging.readthedocs.io">django-rich-logging</a>
         <span class="info">
-          Live updating Django request logging
+          Tail Django requests
         </span>
       </li>
     </ul>
@@ -148,13 +154,13 @@
       <li>
         <a href="https://indieweb.social/@adamghill">indieweb.social/@adamghill</a>
         <span class="info">
-          Mastodon ramblings
+          Ramblings
         </span>
       </li>
       <li>
         <a href="https://dev.to/adamghill">dev.to/adamghill</a>
         <span class="info">
-          Blog posts
+          Articles
         </span>
       </li>
       <li>
